--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" sizes="180X180" href="src\assets\favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hirer - Get Ahead in your career</title>
+    <title>Hirer - Get Ahead In Your Career</title>
   </head>
   <body>
     <div id="root"></div>
